# lazyfp

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker.yml
config/: custom_rules.json  rules.json  settings.yaml
core/: cache.py  orchestrator.py  queue_manager.py  rule_engine.py
extractors/: amount_extractor.py  base.py  company_name.py  date_extractor.py  invoice_no.py
static/: index.html
tests/: test_extractors.py
