[project]
name = "lazyfp"
version = "0.2.0"
description = "Lazy Fa Piao - Automated Chinese Invoice Management"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.3",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extractors", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
